# rclean

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: cleanup-safety-concern.yml  config.yml  feature-request.yml  scan-false-positive.yml
.github/homebrew/: rclean.rb.tmpl
.github/scripts/: extract-release-notes.sh  package-version.sh  test-release-contracts.sh  test-verify-release-version.sh  verify-release-version.sh
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  install-smoke.yml  release.yml
benches/: scan_throughput.rs
docs/: action-plan-format.md  architecture.md  explain-mode.md  native-tool-cleanup-policy.md  safety-model.md
docs/artifacts/: multi-ai-research-rclean-arch-20260516-121947.md
docs/perf/: v0.1.5.md
docs/release/: packaging.md  release-checklist.md
docs/reports/: 2026-05-06-workspace-benchmark.md  2026-05-31-issue-111-scan-perf.md  github-trending-analysis.md
docs/specs/: ai-model-caches.md  complete-spec.md  mvp-spec.md  python-global-caches.md  v0.1.x-roadmap.md  v0.2-best-ux.md  v0.2-developer-mole.md  v0.3-adoption-polish.md  v0.3-developer-toolchain-extra.md
specs/GH159/: product.md  tasks.md  tech.md
specs/GH160/: product.md  tasks.md  tech.md
specs/GH162/: product.md  tasks.md  tech.md
specs/GH178/: product.md  tasks.md  tech.md
specs/GH205/: product.md  tasks.md  tech.md
specs/GH215/: product.md  tasks.md  tech.md
specs/GH216/: product.md  tasks.md  tech.md
specs/GH217/: product.md  tasks.md  tech.md
specs/GH218/: product.md  tasks.md  tech.md
specs/GH219/: product.md  tasks.md  tech.md
specs/GH220/: product.md  tasks.md  tech.md
specs/GH221/: product.md  tasks.md  tech.md
specs/GH238/: product.md  tasks.md  tech.md
specs/GH240/: product.md  tasks.md  tech.md
specs/GH242/: product.md  tasks.md  tech.md
specs/GH244/: product.md  tasks.md  tech.md
specs/GH246/: product.md  tasks.md  tech.md
specs/GH253/: product.md  tasks.md  tech.md
specs/GH256/: product.md  tasks.md  tech.md
specs/GH259/: product.md  tasks.md  tech.md
specs/GH262/: product.md  tasks.md  tech.md
specs/GH265/: product.md  tasks.md  tech.md
specs/GH268/: product.md  tasks.md  tech.md
specs/GH271/: product.md  tasks.md  tech.md
specs/GH274/: product.md  tasks.md  tech.md
specs/GH277/: product.md  tasks.md  tech.md
specs/GH281/: product.md  tasks.md  tech.md
specs/GH284/: product.md  tasks.md  tech.md
specs/GH287/: product.md  tasks.md  tech.md
specs/GH290/: product.md  tasks.md  tech.md
specs/GH293/: product.md  tasks.md  tech.md
specs/GH296/: product.md  tasks.md  tech.md
specs/GH301/: product.md  tasks.md  tech.md
specs/GH305/: product.md  tasks.md  tech.md
specs/GH310/: product.md  tasks.md  tech.md
specs/GH314/: product.md  tasks.md  tech.md
specs/GH317/: product.md  tasks.md  tech.md
specs/GH320/: product.md  tasks.md  tech.md
specs/GH323/: product.md  tasks.md  tech.md
specs/GH326/: product.md  tasks.md  tech.md
specs/GH329/: product.md  tasks.md  tech.md
specs/GH334/: product.md  tasks.md  tech.md
specs/GH337/: product.md  tasks.md  tech.md
specs/GH340/: product.md  tasks.md  tech.md
specs/GH349/: product.md  tasks.md  tech.md
specs/GH350/: product.md  tasks.md  tech.md
specs/GH354/: product.md  tasks.md  tech.md
src/: clean.rs  cli.rs  docker.rs  doctor.rs  error.rs  free.rs  main.rs  model.rs  output.rs  parse.rs  path_util.rs  plan.rs  rules.rs  scan.rs  scan_tests.rs  scan_walker.rs  stdio.rs  test_support.rs  user_rules.rs
tests/: cli.rs  cross_platform.rs  docker_report_cli.rs  go_clean_cli.rs  graveyard_cli.rs  graveyard_subcommands.rs  ide_caches_cli.rs  ignore_file.rs  macos_scan_cli.rs  pip_clean_cli.rs  rules.rs  stamp_cli.rs  system_cli.rs  user_rules.rs
(+105 files in other folders)
