[package]
name = "rclean-cli"
version = "0.1.0"
edition = "2024"
description = "Find and safely clean rebuildable developer artifacts across local workspaces"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/rclean-cli"
keywords = ["cleanup", "disk", "cli", "developer-tools", "rust"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rclean"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
thiserror = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trash = "5.2"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
