[package]
name = "rclean-cli"
version = "0.1.4"
edition = "2024"
rust-version = "1.88"
description = "Find and safely clean rebuildable developer artifacts across local workspaces"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/rclean-cli"
keywords = ["cleanup", "disk", "cli", "developer-tools", "rust"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rclean"
path = "src/main.rs"

[features]
default = ["graveyard"]
graveyard = []
tui = ["dep:crossterm", "dep:ratatui"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", optional = true }
globset = "0.4"
ignore = "0.4"
notify = "8"
rayon = "1.10"
ratatui = { version = "0.29", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
thiserror = "2.0"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trash = "5.2"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.2"
criterion = "0.5"
predicates = "3.1"

[[bench]]
name = "scan_throughput"
harness = false
