[package]
name = "rclean-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
description = "Find and safely clean rebuildable developer artifacts across local workspaces"
readme = "README.md"
license = "MIT"
repository = "https://github.com/majiayu000/rclean"
documentation = "https://docs.rs/rclean-cli"
keywords = ["cleanup", "disk", "cli", "developer-tools", "rust"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rclean"
path = "src/main.rs"

# cargo-binstall resolves prebuilt binaries from GitHub Releases using
# the archive layout produced by .github/workflows/release.yml.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[features]
default = ["graveyard", "tui"]
graveyard = []
tui = ["dep:crossterm", "dep:ratatui"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", optional = true }
globset = "0.4"
ignore = "0.4"
notify = "8"
rayon = "1.10"
ratatui = { version = "0.30", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
thiserror = "2.0"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trash = "5.2"
wait-timeout = "0.2"
walkdir = "2.5"
clap_complete = "4.5"
clap_mangen = "0.3"

[dev-dependencies]
assert_cmd = "2.2"
criterion = "0.8"
predicates = "3.1"

[[bench]]
name = "scan_throughput"
harness = false
